--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p>Cafayate, Salta</p>
         </div>
 
-        <a href="#">Contactar</a>
+        <a class="boton" href="#">Contactar</a>
       </div>
     </section>
 
