Degradados con CSS

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <a href="#">Contactos</a>
       </nav>
     </div>
+    <!-- .nav-bg -->
 
     <section class="hero">
       <div class="contenido-hero">
@@ -59,12 +60,14 @@
 
           <p>Cafayate, Salta</p>
         </div>
+        <!-- .ubicacion-->
 
         <a class="boton" href="#">Contactar</a>
       </div>
+      <!-- .contenido-hero-->
     </section>
 
-    <main>
+    <main class="contenedor">
       <h2>Mis Servicios</h2>
 
       <section>
