--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!-- .contenido-hero-->
     </section>
 
-    <main class="contenedor">
+    <main class="contenedor sombra">
       <h2>Mis Servicios</h2>
 
       <section>
