--- a/index.html
+++ b/index.html
@@ -193,40 +193,42 @@
         <!-- .servicio -->
       </div>
       <!-- Servicios -->
+
+      <section>
+        <h2>Contacto</h2>
+
+        <form class="formulario">
+          <fieldset>
+            <legend>Contactános rellenandos los campos</legend>
+
+            <div class="contenedor-campos">
+              <div class="campo">
+                <label>Nombre</label>
+                <input type="text" placeholder="Tu nombre" />
+              </div>
+
+              <div class="campo">
+                <label>Telefono</label>
+                <input type="tel" placeholder="Tu Teléfono" />
+              </div>
+
+              <div class="campo">
+                <label>Correo</label>
+                <input type="email" placeholder="Tu Email" />
+              </div>
+
+              <div class="campo">
+                <label>Mensaje</label>
+                <textarea></textarea>
+              </div>
+            </div>
+            <!-- .contenedor-campos-->
+            <div><input type="submit" value="Enviar" /></div>
+          </fieldset>
+        </form>
+      </section>
     </main>
-
-    <section>
-      <h2>Contacto</h2>
-
-      <form>
-        <fieldset>
-          <legend>Contactános rellenandos los campos</legend>
-
-          <div>
-            <label>Nombre</label>
-            <input type="text" placeholder="Tu nombre" />
-          </div>
-
-          <div>
-            <label>Telefono</label>
-            <input type="tel" placeholder="Tu Teléfono" />
-          </div>
-
-          <div>
-            <label>Correo</label>
-            <input type="email" placeholder="Tu Email" />
-          </div>
-
-          <div>
-            <label>Mensaje</label>
-            <textarea></textarea>
-          </div>
-
-          <div><input type="submit" value="Enviar" /></div>
-        </fieldset>
-      </form>
-    </section>
-
+    <!-- .contenedor sombra -->
     <footer>
       <p>Todos los derechos reservados. Oscar Corregidor Freelancer</p>
     </footer>
