Añadiendo un Efecto de Scroll

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <a href="#">Clientes</a>
         <a href="#">Contactos</a>
       </nav>
+      <!-- .navegacion-principal .contenedor-->
     </div>
     <!-- .nav-bg -->
 
@@ -235,7 +236,7 @@
       </section>
     </main>
     <!-- .contenedor sombra -->
-    <footer>
+    <footer class="footer">
       <p>Todos los derechos reservados. Oscar Corregidor Freelancer</p>
     </footer>
   </body>
